# ecumene

./: .dockerignore  .env.dist  .gitignore  .yarnrc  .yarnrc.yml  Cargo.toml  Dockerfile  PLAN.md  README.md  cdk.context.json  convert.ts  data.txt  docker-compose.yml  feed.xml  fly.toml  frontmatter.js  index.css  index.html  justfile  mdx-components.tsx  next.config.js  next.config.mjs  package-lock.json  package.json  robots.txt  sitemap.xml  spin.toml  sst.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  workspace.code-workspace
.astro/: settings.json  types.d.ts
.cargo/: config.toml
.github/workflows/: deploy.yml  jestersprivilege-ca-deploy.yml  mitchellhynes-com-deploy.yml
.husky/: pre-commit
.sst/: stage
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
app/paint/: page.tsx
app/posts/: layout.tsx
app/posts/[slug]/: page.tsx
apps/jestersprivilege.ca/: .prettierrc  astro.config.mjs  package.json  tailwind.config.ts
apps/jestersprivilege.ca/public/blog/: the-more-things-change-hero.jpg_original
apps/jestersprivilege.ca/src/: consts.ts
apps/jestersprivilege.ca/src/components/: BaseHead.astro  DevlogCard.astro  DevlogCard.tsx  EssayCard.astro  Footer.astro  Header.astro  HeaderLink.astro  Image.tsx  ImageGallery.tsx  SideBySide.tsx  TabSwitcher.tsx
apps/jestersprivilege.ca/src/content/: config.ts
apps/jestersprivilege.ca/src/content/blog/: 23-11-25-ideaspace.mdx  23-12-14-end-table.mdx  25-11-25-ideaspace.mdx  25-12-14-end-table.mdx  26-02-08-the-more-things-change.mdx  using-mdx.mdx
apps/jestersprivilege.ca/src/content/devlogs/: piranesi-log-01.mdx  piranesi-log-02.mdx  piranesi-log-03.mdx  skate-log-01.mdx  skate-log-02.mdx  skate-log-03.mdx  skate-log-04.mdx  skate-log-05.mdx  skate-log-06.mdx  skate-log-07.mdx  skate-log-08.mdx  skate-log-09.mdx  skate-log-10.mdx
apps/jestersprivilege.ca/src/layouts/: BlogPost.astro  DevlogPost.astro  layout.astro
apps/jestersprivilege.ca/src/pages/: index.astro
apps/jestersprivilege.ca/src/pages/blog/: [...slug].astro
apps/jestersprivilege.ca/src/pages/devlog/: [...slug].astro
apps/jestersprivilege.ca/src/pages/og/: [...slug].png.ts  [...slug].ts
apps/jestersprivilege.ca/src/styles/: global.css
apps/mitchellhynes.com/: .dockerignore  .gitignore  LICENSE  astro.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/mitchellhynes.com/public/videos/: blitz.webm  colco.webm  faber.webm  pikachu.webm
apps/mitchellhynes.com/src/: consts.ts  types.ts
apps/mitchellhynes.com/src/components/: BaseHead.astro  CardFan.tsx  Footer.astro  Header.astro  ProjectCard.tsx
apps/mitchellhynes.com/src/content/: config.ts
apps/mitchellhynes.com/src/content/posts/: fullstack-course.mdx
apps/mitchellhynes.com/src/content/projects/: colco-rs.mdx  dutch-blitz-js.mdx  faber-gg.mdx  reviewgpt.mdx  rust-sloth.mdx
apps/mitchellhynes.com/src/content/sheets/: projects.csv
apps/mitchellhynes.com/src/layouts/: BlogPost.astro  ProjectPost.astro
apps/mitchellhynes.com/src/pages/: index.astro
apps/mitchellhynes.com/src/pages/projects/: [...slug].astro
apps/mitchellhynes.com/src/styles/: global.css
apps/mitchellhynes.com/src/vectorDisplays/: MyHead.tsx  Shape.tsx
assets/: CNAME  humans.txt  index.css  logo-full.aseprite  logo.aseprite  page.js
authors/: ecumene.md  jackharrhy.md
backend/: spin.toml
backend/likes/: Cargo.toml
backend/likes/src/: lib.rs
backend/tokenize/: Cargo.toml
backend/tokenize/src/: lib.rs
blog/: hello-world.html  index.html  poggers.html  trainstop.html
blog/hello-world/: index.html
blog/trainstop/: index.html
components/icons/: Shape.tsx
components/navbar/: Navbar.tsx
components/ui/: badge.tsx  button.tsx  navigation-menu.tsx  splain.tsx  webpage.tsx
content/: fullstack-course.mdx
crates/post_process_outline/: Cargo.toml
crates/post_process_outline/src/: lib.rs
functions/bot/: Cargo.toml
functions/bot/src/: lib.rs
functions/splain/: Cargo.toml
functions/splain/src/: lib.rs
functions/static/: Cargo.toml
functions/static/src/: lib.rs
functions/tokenize/: Cargo.toml
functions/tokenize/crates/tokenize/: Cargo.toml
functions/tokenize/crates/tokenize/src/: lib.rs
functions/tokenize/src/: auth.rs  delete.rs  get.rs  key_value.rs  lib.rs  post.rs
mun/: README.md  index.html
portfolio/: 0-rust-sloth.toml  1-sfn-vis.toml  2-faber.toml  2-sst.toml  3-illustrations.toml  4-food.toml  index.ts
posts/: spin-rewrite.md  test.md  trainstop.md
public/: humans.txt  index.css  poggers.html  sitemap.xml
public/blog/: index.html  poggers.html
redis/: fly.toml
src/: authors.rs  builder.rs  consts.ts  date.rs  error.rs  inventory.rs  main.rs  parser.rs  posts.rs  structs.rs  template.rs  templating.rs  writer.rs
src/components/: BaseHead.astro  Footer.astro
src/components/icons/: MyHead.tsx  MySignature.tsx  Shape.tsx
src/components/ui/: badge.tsx  card.tsx  cardFan.tsx  jesterbutton.tsx  projectTable.tsx  splain.tsx
src/content/posts/: fullstack-course.mdx
src/content/sheets/: projects.csv
src/layouts/: BlogPost.astro
src/pages/: index.astro
src/pages/posts/: index.astro
team/: ecumene.html  index.html  jackharrhy.html
templates/: base.html  blogindex.html  blogpost.html  index.html  rss.xml  sitemap.xml
templates/blog/: index.html  post.html
templates/team/: author.html  index.html
tmp/: index.html
