[package]
name = "site"
version = "0.1.0"
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.10"
tera = "1"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
mitch-outline = { path = "crates/post_process_outline" }
walkdir = "2.3.2"

[workspace]
members = [
    "crates/post_process_outline",
]
