[package]
authors = ["Mitchell Hynes <me@mitchellhynes.com>"]
edition = "2018"
name = "site"
version = "0.1.0"

[dependencies]
anyhow = "1.0.0"
chrono = {version = "0.4", features = ["serde"]}
lazy_static = "1.4.0"
mitch-outline = {path = "crates/post_process_outline"}
pulldown-cmark = "0.9.1"
reqwest = {version = "0.11", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1"
toml = "0.5.8"
walkdir = "2.3.2"

[workspace]
exclude = [
  "functions/tokenize",
]
members = [
  "crates/post_process_outline",
]
