[package]
edition = "2021"
name = "splain"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = {git = "https://github.com/fermyon/spin", tag = "v0.5.0"}
wit-bindgen-rust = {git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2f46ce4cc072107153da0cefe15bdc69aa5b84d0"}

[workspace]
