[package]
name = "tokenize"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2f46ce4cc072107153da0cefe15bdc69aa5b84d0" }
cookie = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwt = "0.16.0"
hmac = "0.12.0"
sha2 = "0.10.2"

[workspace]

