[package]
edition = "2021"
name = "tokenize"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
cookie = "0.16"
hmac = "0.12.0"
http = "0.2"
jwt = "0.16.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.10.2"
spin-sdk = {git = "https://github.com/fermyon/spin", tag = "v0.5.0"}
wit-bindgen-rust = {git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2f46ce4cc072107153da0cefe15bdc69aa5b84d0"}
